--- a/1-WeLoveDogs/html/contato.html
+++ b/1-WeLoveDogs/html/contato.html
@@ -41,6 +41,34 @@
             <div class="image">
                 <img src="../imgs/Figure5.png" alt="">
             </div>
+
+            <form class="registration-form">
+                <div class="input-field">
+                    <label for="">Nome</label>
+                    <input name="name" type="text" placeholder="Seu nome">
+                </div>
+
+                <div class="input-field">
+                    <label for="">Idade</label>
+                    <input name="age" type="text" placeholder="18">
+                </div>
+
+                <div class="input-field">
+                    <label for="">E-mail</label>
+                    <input name="e-mail" type="email" placeholder="exemplo@exemplo">
+                </div>
+
+                <div class="message-field">
+                    <label for="">Ama cachorros?</label>
+                    <input name="message" type="text" placeholder="Mensagem"> </input>
+                </div>
+
+                <div class="button-field">
+                    <button type="submit">Enviar</button>
+                </div>
+                
+            </form>
+
         </section>
     </main>
     
