--- a/1-WeLoveDogs/html/contato.html
+++ b/1-WeLoveDogs/html/contato.html
@@ -25,7 +25,9 @@
                     <a href="blog.html">BLOG</a>
                 </li>
                 <li>
-                    <a id="inscrever_head" href="contato.html">INSCREVER</a>
+                    <button class="header-button">
+                        <a id="inscrever_head" href="contato.html">INSCREVER</a>
+                    </button>
                 </li>
             </ul>
         </nav>
@@ -54,7 +56,7 @@
                 <label for="">Ama cachorros?</label>
                 <textarea name="message" type="text">Mensagem</textarea>
 
-                <div class="button-field">
+                <div class="section-button">
                     <button type="submit">Enviar</button>
                 </div>
 
