--- a/1-WeLoveDogs/html/home.html
+++ b/1-WeLoveDogs/html/home.html
@@ -25,7 +25,9 @@
                     <a href="blog.html">BLOG</a>
                 </li>
                 <li>
-                    <a id="inscrever_head" href="contato.html">INSCREVER</a>
+                    <button class="header-button">
+                        <a id="inscrever_head" href="contato.html">INSCREVER</a>
+                    </button>
                 </li>
             </ul>
         </nav>
@@ -35,9 +37,9 @@
         <section class="section">
             <div class="content">
                 <h1 class="h1-main">Junte-se a comunidade apaixonada por cachorros</h1>
-                <a href="contato.html">
-                    Inscrever-se
-                </a>
+                <button class="section-button">
+                    <a href="quem_somos.html">Saiba mais</a>
+                </button>
             </div>
             
             <div class="image">
