--- a/1-WeLoveDogs/html/quem_somos.html
+++ b/1-WeLoveDogs/html/quem_somos.html
@@ -25,7 +25,9 @@
                     <a href="blog.html">BLOG</a>
                 </li>
                 <li>
-                    <a id="inscrever_head" href="contato.html">INSCREVER</a>
+                    <button class="header-button">
+                        <a id="inscrever_head" href="contato.html">INSCREVER</a>
+                    </button>
                 </li>
             </ul>
         </nav>
