mudanças na estrutura e no estilo dos botões

--- a/1-WeLoveDogs/html/contato.html
+++ b/1-WeLoveDogs/html/contato.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
+    <link rel="stylesheet" href="../css/style.css">
+
 </head>
 <body>
 
     <header class="header">
-        <h1 class="logo">
-            <a href="home.html">
-                we<span class="green_letters">love</span>dogs  
-            </a>
-        </h1>
-            
-            
         <nav>
+            <h1 class="logo">
+                <a href="home.html">
+                    we<span class="green_letters">love</span>dogs  
+                </a>
+            </h1>
+
             <ul class="nav-items">
                 <li>
                     <a href="quem_somos.html">QUEM SOMOS</a>
@@ -25,9 +26,7 @@
                     <a href="blog.html">BLOG</a>
                 </li>
                 <li>
-                    <button class="header-button">
-                        <a id="inscrever_head" href="contato.html">INSCREVER</a>
-                    </button>
+                    <a class="header-button" href="contato.html">INSCREVER</a>
                 </li>
             </ul>
         </nav>
@@ -43,6 +42,7 @@
             </div>
 
             <form class="registration-form">
+
                 <label for="">Nome</label>
                 <input name="name" type="text" placeholder="Seu nome">
 
@@ -57,7 +57,7 @@
                 <textarea name="message" type="text">Mensagem</textarea>
 
                 <div class="section-button">
-                    <button type="submit">Enviar</button>
+                    <a href="quem_somos.html">Enviar</a>
                 </div>
 
             </form>
