mudanças em algumas estruturas e classes para melhorar a estilização

--- a/1-WeLoveDogs/html/blog.html
+++ b/1-WeLoveDogs/html/blog.html
@@ -37,25 +37,27 @@
         <header>
             <h1 class="h1-main">BLOG</h1>
         </header>
-        <section class="section-blog">
-            <div class="content">
-                <h2 class="h2-main">Título do Post</h2>
-                <p class="p-main">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At quis risus sed vulputate odio ut enim blandit volutpat. Urna duis convallis convallis tellus id interdum velit laoreet id. Sed felis eget velit aliquet sagittis id consectetur purus ut. Orci phasellus egestas tellus rutrum tellus. At elementum eu facilisis sed.  Quam elementum pulvinar etiam non quam lacus. Viverra tellus in hac habitasse platea. Congue eu consequat ac felis donec et odio. Amet cursus sit amet dictum sit amet. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum odio. Consectetur a erat nam at.                </p>
-            </div>
-            <div class="image">
-                <img src="../imgs/Figure3.png" alt="">
-            </div>
-        </section>
-        <section class="section-blog">
-            <div class="content">
-                <h2 class="h2-main">Título do Post</h2>
-                <p class="p-main">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At quis risus sed vulputate odio ut enim blandit volutpat. Urna duis convallis convallis tellus id interdum velit laoreet id. Sed felis eget velit aliquet sagittis id consectetur purus ut. Orci phasellus egestas tellus rutrum tellus. At elementum eu facilisis sed.  Quam elementum pulvinar etiam non quam lacus. Viverra tellus in hac habitasse platea. Congue eu consequat ac felis donec et odio. Amet cursus sit amet dictum sit amet. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum odio. Consectetur a erat nam at.                </p>
-            </div>
-            <div class="image">
-                <img src="../imgs/Figure4.png" alt="">
-            </div>
+        <section class="section">
+            <section class="section-blog">
+                <div class="content">
+                    <h2 class="h2-main">Título do Post</h2>
+                    <p class="p-blog">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At quis risus sed vulputate odio ut enim blandit volutpat. Urna duis convallis convallis tellus id interdum velit laoreet id. Sed felis eget velit aliquet sagittis id consectetur purus ut. Orci phasellus egestas tellus rutrum tellus. At elementum eu facilisis sed.  Quam elementum pulvinar etiam non quam lacus. Viverra tellus in hac habitasse platea. Congue eu consequat ac felis donec et odio. Amet cursus sit amet dictum sit amet. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum odio. Consectetur a erat nam at.                </p>
+                </div>
+                <div class="image">
+                    <img src="../imgs/Figure3.png" alt="">
+                </div>
+            </section>
+            <section class="section-blog">
+                <div class="content">
+                    <h2 class="h2-main">Título do Post</h2>
+                    <p class="p-blog">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At quis risus sed vulputate odio ut enim blandit volutpat. Urna duis convallis convallis tellus id interdum velit laoreet id. Sed felis eget velit aliquet sagittis id consectetur purus ut. Orci phasellus egestas tellus rutrum tellus. At elementum eu facilisis sed.  Quam elementum pulvinar etiam non quam lacus. Viverra tellus in hac habitasse platea. Congue eu consequat ac felis donec et odio. Amet cursus sit amet dictum sit amet. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum odio. Consectetur a erat nam at.                </p>
+                </div>
+                <div class="image">
+                    <img src="../imgs/Figure4.png" alt="">
+                </div>
+            </section>
         </section>
     </main>
     
