--- a/1-WeLoveDogs/html/home.html
+++ b/1-WeLoveDogs/html/home.html
@@ -33,13 +33,12 @@
     </header>
 
     <main>
-        <section class="section">
+        <section class="section-home">
             <div class="content">
                 <h1 class="h1-main">Junte-se a comunidade apaixonada por cachorros</h1>
-            </div>
-
-            <div class="section-button">
-                <a href="quem_somos.html">Saiba mais</a>
+                <div class="section-button">
+                    <a href="quem_somos.html">Saiba mais</a>
+                </div>
             </div>
             
             <div class="image">
