mudanças em algumas classes, botões e estrutura afim de melhorar a estilização

--- a/1-WeLoveDogs/html/home.html
+++ b/1-WeLoveDogs/html/home.html
@@ -34,10 +34,10 @@
 
     <main>
         <section class="section-home">
-            <div class="content">
+            <div class="content-home">
                 <h1 class="h1-main">Junte-se a comunidade apaixonada por cachorros</h1>
                 <div class="section-button">
-                    <a href="quem_somos.html">Saiba mais</a>
+                    <a href="contato.html">Inscrever-se</a>
                 </div>
             </div>
             
