--- a/1-WeLoveDogs/html/contato.html
+++ b/1-WeLoveDogs/html/contato.html
@@ -66,7 +66,7 @@
                     </div>
     
                     <div class="section-button">
-                        <a href="quem_somos.html">Enviar</a>
+                        <a href="#">Enviar</a>
                     </div>
     
                 </form>
