corrigindo cover da imagem

--- a/2-responsivo/index.html
+++ b/2-responsivo/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
     <section class="card">
-        <img class="card-image" src="images/image.png" alt="Folhas">
+        <div class="card-image">
+        </div>
         <main class="card-info">
             <header>
                 <h1>Decore sua casa com plantas!</h1>
