--- a/2-responsivo/index.html
+++ b/2-responsivo/index.html
@@ -26,7 +26,9 @@
                         <h2 class="date">29/09/2022</h2>
                     </div>
                 </div>
-                <img src="images/share.png" alt="Share button">
+                <button> 
+                    <img src="images/share.png" alt="Share button">
+                </button>
             </footer>
         </main>
     </section>
