--- a/2-responsivo/index.html
+++ b/2-responsivo/index.html
@@ -18,9 +18,8 @@
                 <h1>Decore sua casa com plantas!</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus at ornare tortor, magna interdum ut. Fringilla tellus neque malesuada ullamcorper. Lacinia interdum sollicitudin sed sit eget sit. Tristique velit gravida aenean nulla. Ut gravida lobortis magnis purus dui. At nibh massa orci, varius auctor cursus commodo. Nisi, non molestie tincidunt posuere leo etiam eu, orci. Consequat diam facilisi neque, est sit. Gravida nibh magna cursus eget eget velit cras.</p>
             </header>
-
             <footer class="footer">
-                <span id = "social-medias"></span>
+                <div id = "social-medias"></div>
                 <div class="not-hidden">
                     <div class="profile">
                         <img src="images/Frame 3.png" alt="Doguito">
